--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -174,8 +174,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="descriptionTextView" destination="U5E-9S-ezh" id="cfg-Xk-qgW"/>
-                        <outlet property="emotionSegementedController" destination="2RM-bK-NGE" id="HLj-wd-q5e"/>
                         <outlet property="entryTextField" destination="MNq-3T-h9p" id="BSQ-sq-G78"/>
+                        <outlet property="moodSegementedController" destination="2RM-bK-NGE" id="yM2-Mq-Bft"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
